# respicta

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.github/workflows/: release-pr-checks.yml  release.yml  rust.yml
examples/: client.js  client.rs  client_n.rs  command-client.js  convert.rs  convert_webp_n.rs  respicta.postman_collection.json  server.rs
src/: app_error.rs  command_server.rs  convert.rs  extensions.rs  lib.rs  magick.rs  main.rs  mozjpeg.rs  optimize.rs  oxipng.rs  server.rs  webp.rs
src/core/: gif2gif.rs  gif2webp.rs  jpeg2jpeg.rs  jpeg2webp.rs  mod.rs  png2avif.rs  png2jpeg.rs  png2png.rs  png2webp.rs  webp2webp.rs
src/utils/: gifsicle.rs  magick.rs  mod.rs  oxipng.rs  webp.rs
